CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
INCLUDE_DIRECTORIES(./include)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -Wall")
SET(PROJECT_DIR ${CMAKE_SOURCE_DIR})
ADD_DEFINITIONS(-std=c++11)

ADD_SUBDIRECTORY(demo/rtmp_flv_pusher)
